Se actualiza servicio de correo gmail

--- a/views/email.ejs
+++ b/views/email.ejs
@@ -77,6 +77,9 @@
             <p><strong>Teléfono:</strong>
                 <%= telefono %>
             </p>
+            <p><strong>Tipo:</strong>
+                <%= tipo %>
+            </p>
             <p><strong>Mensaje:</strong></p>
             <p><em>"<%= mensaje %>"</em></p>
         </div>
